--- a/devel/p5-File-Find-Rule-Perl/Makefile
+++ b/devel/p5-File-Find-Rule-Perl/Makefile
@@ -1,6 +1,6 @@
-# $NetBSD: Makefile,v 1.1.1.1 2009/05/29 08:39:02 sno Exp $
+# $NetBSD: Makefile,v 1.2 2009/07/18 17:50:56 sno Exp $
 
-DISTNAME=	File-Find-Rule-Perl-1.06
+DISTNAME=	File-Find-Rule-Perl-1.08
 PKGNAME=	p5-${DISTNAME}
 CATEGORIES=	devel perl5
 MASTER_SITES=	${MASTER_SITE_PERL_CPAN:=File/}
@@ -8,7 +8,7 @@ MASTER_SITES=	${MASTER_SITE_PERL_CPAN:=File/}
 MAINTAINER=	pkgsrc-users@NetBSD.org
 HOMEPAGE=	http://search.cpan.org/dist/File-Find-Rule-Perl/
 COMMENT=	Common File::Find::Rule rules for searching for Perl things
-#LICENSE=	${PERL_LICENSE}
+LICENSE=	${PERL5_LICENSE}
 
 PKG_INSTALLATION_TYPES=	overwrite pkgviews
 PKG_DESTDIR_SUPPORT=	user-destdir
