--- a/devel/p5-File-Find-Rule-VCS/Makefile
+++ b/devel/p5-File-Find-Rule-VCS/Makefile
@@ -1,6 +1,6 @@
-# $NetBSD: Makefile,v 1.2 2009/05/29 08:56:52 sno Exp $
+# $NetBSD: Makefile,v 1.3 2009/07/18 17:56:46 sno Exp $
 
-DISTNAME=	File-Find-Rule-VCS-1.05
+DISTNAME=	File-Find-Rule-VCS-1.06
 PKGNAME=	p5-${DISTNAME}
 CATEGORIES=	devel perl5
 MASTER_SITES=	${MASTER_SITE_PERL_CPAN:=File/}
@@ -8,14 +8,16 @@ MASTER_SITES=	${MASTER_SITE_PERL_CPAN:=File/}
 MAINTAINER=	pkgsrc-users@NetBSD.org
 HOMEPAGE=	http://search.cpan.org/dist/File-Find-Rule-VCS/
 COMMENT=	File::Find::Rule extension to Exclude files/directories for VCS's
-#LICENSE=	${PERL_LICENSE}
+LICENSE=	${PERL5_LICENSE}
 
 PKG_INSTALLATION_TYPES=	overwrite pkgviews
 PKG_DESTDIR_SUPPORT=	user-destdir
 
 DEPENDS+=	p5-File-Find-Rule>=0.20:../../devel/p5-File-Find-Rule
+DEPENDS+=	p5-Text-Glob>=0.08:../../textproc/p5-Text-Glob
 
 PERL5_PACKLIST=		auto/File/Find/Rule/VCS/.packlist
+PERL5_MODULE_TYPE=	Module::Install
 
 .include "../../lang/perl5/module.mk"
 .include "../../mk/bsd.pkg.mk"
