--- a/net/p5-Net-Packet/Makefile
+++ b/net/p5-Net-Packet/Makefile
@@ -1,23 +1,23 @@
-# $NetBSD: Makefile,v 1.7 2009/07/17 18:00:21 adrianp Exp $
+# $NetBSD: Makefile,v 1.8 2009/07/18 18:40:05 sno Exp $
 
-DISTNAME=	Net-Packet-3.25
+DISTNAME=	Net-Packet-3.26
 PKGNAME=	p5-${DISTNAME}
-PKGREVISION=	1
 CATEGORIES=	net perl5
 MASTER_SITES=	${MASTER_SITE_PERL_CPAN:=Net/}
 
 MAINTAINER=	pkgsrc-users@NetBSD.org
 COMMENT=	Modules to assemble/disassemble network packets
+HOMEPAGE=	http://search.cpan.org/dist/Net-Packet/
+LICENSE=	artistic
 
-DEPENDS+=	p5-Net-Pcap>=0.14:../../net/p5-Net-Pcap
-DEPENDS+=	p5-IO-Interface-[0-9]*:../../net/p5-IO-Interface
-DEPENDS+=	p5-Socket6-[0-9]*:../../net/p5-Socket6
-DEPENDS+=	p5-Time-HiRes-[0-9]*:../../time/p5-Time-HiRes
-DEPENDS+=	p5-Net-IPv6Addr-[0-9]*:../../net/p5-Net-IPv6Addr
-DEPENDS+=	p5-Class-Gomor-[0-9]*:../../devel/p5-Class-Gomor
 DEPENDS+=	p5-Bit-Vector-[0-9]*:../../devel/p5-Bit-Vector
-DEPENDS+=	p5-Net-Write-[0-9]*:../../net/p5-Net-Write
-DEPENDS+=	p5-Net-Libdnet-[0-9]*:../../net/p5-Net-Libdnet
+DEPENDS+=	p5-Class-Gomor>=1.0:../../devel/p5-Class-Gomor
+#DEPENDS+=	p5-IO-Interface-[0-9]*:../../net/p5-IO-Interface
+DEPENDS+=	p5-Net-IPv6Addr-[0-9]*:../../net/p5-Net-IPv6Addr
+DEPENDS+=	p5-Net-Libdnet>=0.91:../../net/p5-Net-Libdnet
+DEPENDS+=	p5-Net-Pcap>=0.14:../../net/p5-Net-Pcap
+DEPENDS+=	p5-Net-Write>=1.0:../../net/p5-Net-Write
+DEPENDS+=	p5-Socket6-[0-9]*:../../net/p5-Socket6
 
 PKG_INSTALLATION_TYPES=		overwrite pkgviews
 PKG_DESTDIR_SUPPORT=	user-destdir
