--- a/textproc/p5-Text-Reflow/Makefile
+++ b/textproc/p5-Text-Reflow/Makefile
@@ -1,7 +1,7 @@
-# $NetBSD: Makefile,v 1.5 2009/07/08 11:24:23 sno Exp $
+# $NetBSD: Makefile,v 1.6 2009/07/18 18:45:15 sno Exp $
 #
 
-DISTNAME=		Text-Reflow-1.07
+DISTNAME=		Text-Reflow-1.09
 PKGNAME=		p5-${DISTNAME}
 SVR4_PKGNAME=		p5rfl
 CATEGORIES=		textproc perl5
@@ -10,7 +10,7 @@ MASTER_SITES=		${MASTER_SITE_PERL_CPAN:=Text/}
 MAINTAINER=		heinz@NetBSD.org
 HOMEPAGE=		http://search.cpan.org/dist/Text-Reflow/
 COMMENT=		Reflowing of text using Knuth's paragraphing algorithm
-LICENSE=		gnu-gpl-v2
+LICENSE=		${PERL5_LICENSE}
 
 PKG_INSTALLATION_TYPES=	overwrite pkgviews
 PKG_DESTDIR_SUPPORT=	user-destdir
