--- a/x11/gtk2/Makefile
+++ b/x11/gtk2/Makefile
@@ -1,6 +1,6 @@
-# $NetBSD: Makefile,v 1.180 2009/07/09 17:37:27 drochner Exp $
+# $NetBSD: Makefile,v 1.181 2009/07/18 19:19:55 wiz Exp $
 
-DISTNAME=		gtk+-2.16.4
+DISTNAME=		gtk+-2.16.5
 PKGNAME=		${DISTNAME:S/gtk/gtk2/}
 CATEGORIES=		x11
 MASTER_SITES=		ftp://ftp.gtk.org/pub/gtk/2.16/ \
