--- a/devel/p5-Module-CPANTS-Analyse/Makefile
+++ b/devel/p5-Module-CPANTS-Analyse/Makefile
@@ -1,6 +1,6 @@
-# $NetBSD: Makefile,v 1.3 2009/06/14 23:53:39 sno Exp $
+# $NetBSD: Makefile,v 1.4 2009/07/18 22:13:47 sno Exp $
 
-DISTNAME=		Module-CPANTS-Analyse-0.83
+DISTNAME=		Module-CPANTS-Analyse-0.85
 PKGNAME=		p5-${DISTNAME}
 CATEGORIES=		devel perl5
 MASTER_SITES=		${MASTER_SITE_PERL_CPAN:=Module/}
@@ -27,11 +27,12 @@ DEPENDS+=	p5-Software-License>=0.003:../../devel/p5-Software-License
 DEPENDS+=	p5-Test-YAML-Meta>=0.11:../../devel/p5-Test-YAML-Meta
 DEPENDS+=	p5-Text-CSV_XS>=0.45:../../textproc/p5-Text-CSV_XS
 DEPENDS+=	p5-YAML-Syck>=0.95:../../textproc/p5-YAML-Syck
+DEPENDS+=	p5-libwww-[0-9]*:../../www/p5-libwww
 DEPENDS+=	{perl>=5.10,p5-version>=0.73}:../../devel/p5-version
 
 BUILD_DEPENDS+=	p5-Test-Deep-[0-9]*:../../devel/p5-Test-Deep
 BUILD_DEPENDS+=	p5-Test-NoWarnings-[0-9]*:../../devel/p5-Test-NoWarnings
-BUILD_DEPENDS+=	p5-Test-Warn-[0-9]*:../../devel/p5-Test-Warn
+BUILD_DEPENDS+=	p5-Test-Warn>=0.11:../../devel/p5-Test-Warn
 
 PKG_DESTDIR_SUPPORT=	user-destdir
 
