--- a/textproc/xapian-omega/Makefile
+++ b/textproc/xapian-omega/Makefile
@@ -1,9 +1,9 @@
-# $NetBSD: Makefile,v 1.8 2009/07/07 21:24:04 joerg Exp $
+# $NetBSD: Makefile,v 1.9 2009/07/18 22:28:28 schmonz Exp $
 #
 
-DISTNAME=		xapian-omega-1.0.12
+DISTNAME=		xapian-omega-1.0.13
 CATEGORIES=		textproc
-MASTER_SITES=		http://oligarchy.co.uk/xapian/1.0.12/
+MASTER_SITES=		http://oligarchy.co.uk/xapian/1.0.13/
 
 MAINTAINER=		schmonz@NetBSD.org
 HOMEPAGE=		http://xapian.org/docs/omega/overview.html
