--- a/www/p5-WWW-Amazon-Wishlist/Makefile
+++ b/www/p5-WWW-Amazon-Wishlist/Makefile
@@ -1,8 +1,8 @@
-# $NetBSD: Makefile,v 1.17 2009/07/07 20:02:19 sno Exp $
+# $NetBSD: Makefile,v 1.18 2009/07/19 10:39:54 sno Exp $
 #
 
-DISTNAME=	WWW-Amazon-Wishlist-1.602
-PKGNAME=	p5-${DISTNAME:C/601/6.2/}
+DISTNAME=	WWW-Amazon-Wishlist-2.001
+PKGNAME=	p5-${DISTNAME}
 SVR4_PKGNAME=	p5waw
 CATEGORIES=	www perl5
 MASTER_SITES=	${MASTER_SITE_PERL_CPAN:=WWW/}
