--- a/databases/p5-DBIx-Class-Fixtures/Makefile
+++ b/databases/p5-DBIx-Class-Fixtures/Makefile
@@ -1,6 +1,6 @@
-# $NetBSD: Makefile,v 1.3 2009/07/07 17:58:32 sno Exp $
+# $NetBSD: Makefile,v 1.4 2009/07/19 11:14:04 sno Exp $
 
-DISTNAME=	DBIx-Class-Fixtures-1.001002
+DISTNAME=	DBIx-Class-Fixtures-1.001003
 PKGNAME=	p5-${DISTNAME}
 CATEGORIES=	databases perl5
 MASTER_SITES=	${MASTER_SITE_PERL_CPAN:=DBIx/}
@@ -20,7 +20,8 @@ DEPENDS+=	p5-Data-Dump-Streamer>=2.05:../../devel/p5-Data-Dump-Streamer
 DEPENDS+=	p5-Data-Visitor>=0.15:../../devel/p5-Data-Visitor
 DEPENDS+=	p5-DateTime>=0.41:../../time/p5-DateTime
 DEPENDS+=	p5-DateTime-Format-MySQL>=0.04:../../time/p5-DateTime-Format-MySQL
-DEPENDS+=	p5-DateTime-Format-SQLite-[0-9]*:../../time/p5-DateTime-Format-SQLite
+DEPENDS+=	p5-DateTime-Format-Pg-[0-9]*:../../time/p5-DateTime-Format-Pg
+DEPENDS+=	p5-DateTime-Format-SQLite>=0.1:../../time/p5-DateTime-Format-SQLite
 DEPENDS+=	p5-File-Copy-Recursive>=0.35:../../sysutils/p5-File-Copy-Recursive
 DEPENDS+=	p5-Hash-Merge>=0.10:../../devel/p5-Hash-Merge
 DEPENDS+=	p5-Path-Class>=0.16:../../devel/p5-Path-Class
