--- a/sysutils/pciutils/Makefile
+++ b/sysutils/pciutils/Makefile
@@ -1,6 +1,7 @@
-# $NetBSD: Makefile,v 1.15 2009/07/08 06:00:47 hasso Exp $
+# $NetBSD: Makefile,v 1.16 2009/07/20 05:58:44 hasso Exp $
 
 DISTNAME=	pciutils-3.1.3
+PKGREVISION=	1
 CATEGORIES=	sysutils
 MASTER_SITES=	ftp://atrey.karlin.mff.cuni.cz/pub/linux/pci/ \
 		ftp://ftp.kernel.org/pub/software/utils/pciutils/ 
