--- a/devel/p5-Perl-Critic/Makefile
+++ b/devel/p5-Perl-Critic/Makefile
@@ -1,7 +1,7 @@
-# $NetBSD: Makefile,v 1.8 2009/03/10 17:59:46 sno Exp $
+# $NetBSD: Makefile,v 1.9 2009/07/20 09:49:42 sno Exp $
 #
 
-DISTNAME=	Perl-Critic-1.098
+DISTNAME=	Perl-Critic-1.100
 PKGNAME=	p5-${DISTNAME}
 #PKGNAME=	p5-${DISTNAME:C/0[0-9][0-9]$/.&/}
 CATEGORIES=	devel perl5
@@ -10,6 +10,7 @@ MASTER_SITES=	${MASTER_SITE_PERL_CPAN:=Perl/}
 MAINTAINER=	pkgsrc-users@NetBSD.org
 HOMEPAGE=	http://search.cpan.org/dist/Perl-Critic/
 COMMENT=	Perl 5 module providing a static Perl source code analysis engine
+LICENSE=	${PERL5_LICENSE}
 
 PKG_DESTDIR_SUPPORT=	user-destdir
 
@@ -18,13 +19,19 @@ DEPENDS+=	p5-Config-Tiny>=2:../../devel/p5-Config-Tiny
 DEPENDS+=	p5-Exception-Class>=1.23:../../devel/p5-Exception-Class
 DEPENDS+=	p5-IO-String-[0-9]*:../../devel/p5-IO-String
 DEPENDS+=	p5-List-MoreUtils-[0-9]*:../../devel/p5-List-MoreUtils
-DEPENDS+=	p5-Module-Pluggable>=3.1:../../devel/p5-Module-Pluggable
+DEPENDS+=	{perl>=5.10,p5-Module-Pluggable>=3.1}:../../devel/p5-Module-Pluggable
 DEPENDS+=	p5-PPI>=1.203:../../devel/p5-PPI
 DEPENDS+=	p5-Readonly>=1.03:../../devel/p5-Readonly
 DEPENDS+=	p5-String-Format>=1.13:../../devel/p5-String-Format
 DEPENDS+=	p5-version-[0-9]*:../../devel/p5-version
 
-.include "options.mk"
+# Recommended dependencies
+DEPENDS+=	p5-File-HomeDir>=0:../../devel/p5-File-HomeDir
+DEPENDS+=	p5-File-Which>=0:../../devel/p5-File-Which
+DEPENDS+=	p5-Perl-Tidy>=0:../../devel/p5-Perl-Tidy
+DEPENDS+=	p5-Pod-Spell>=1:../../textproc/p5-Pod-Spell
+DEPENDS+=	p5-Readonly-XS>=0:../../devel/p5-Readonly-XS
+DEPENDS+=	p5-Regexp-Parser>=0.20:../../devel/p5-Regexp-Parser
 
 USE_LANGUAGES=	# empty
 PERL5_PACKLIST=	auto/Perl/Critic/.packlist
