--- a/www/squid31/Makefile
+++ b/www/squid31/Makefile
@@ -1,7 +1,8 @@
-# $NetBSD: Makefile,v 1.11 2009/07/19 23:05:38 tron Exp $
+# $NetBSD: Makefile,v 1.12 2009/07/20 13:56:31 tron Exp $
 
 DISTNAME=	squid-3.1.0.11
 PKGNAME=	${DISTNAME}	# Necessary for "pkgsrc/www/squid/options.mk"
+PKGREVISION=	1
 CATEGORIES=	www
 MASTER_SITES=	http://www.squid-cache.org/Versions/v3/3.1/ \
 		${SQUID_MASTER_SITES}
