--- a/fonts/Makefile
+++ b/fonts/Makefile
@@ -1,4 +1,4 @@
-# $NetBSD: Makefile,v 1.139 2009/07/15 23:55:12 minskim Exp $
+# $NetBSD: Makefile,v 1.140 2009/07/21 07:27:05 minskim Exp $
 #
 
 COMMENT=	Fonts
@@ -146,6 +146,8 @@ SUBDIR+=	tex-cmex
 SUBDIR+=	tex-courier
 SUBDIR+=	tex-euenc
 SUBDIR+=	tex-euenc-doc
+SUBDIR+=	tex-fontspec
+SUBDIR+=	tex-fontspec-doc
 SUBDIR+=	tex-glyphlist
 SUBDIR+=	tex-helvetic
 SUBDIR+=	tex-kotex-base
