--- a/x11/modular-xorg-server/Makefile
+++ b/x11/modular-xorg-server/Makefile
@@ -1,9 +1,9 @@
-# $NetBSD: Makefile,v 1.48 2009/07/09 13:14:24 tnn Exp $
+# $NetBSD: Makefile,v 1.49 2009/07/21 11:15:53 drochner Exp $
 #
 
 DISTNAME=	xorg-server-1.6.2
 PKGNAME=	modular-${DISTNAME}
-PKGREVISION=	1
+PKGREVISION=	2
 CATEGORIES=	x11
 MASTER_SITES=	${MASTER_SITE_XORG:=xserver/}
 EXTRACT_SUFX=	.tar.bz2
