--- a/x11/pixman/Makefile
+++ b/x11/pixman/Makefile
@@ -1,7 +1,8 @@
-# $NetBSD: Makefile,v 1.28 2009/07/18 06:33:58 wiz Exp $
+# $NetBSD: Makefile,v 1.29 2009/07/21 15:03:29 tnn Exp $
 #
 
 DISTNAME=	pixman-0.15.16
+PKGREVISION=	1
 CATEGORIES=	x11
 MASTER_SITES=	${MASTER_SITE_XORG:=lib/}
 EXTRACT_SUFX=	.tar.bz2
