--- a/graphics/tesseract/Makefile
+++ b/graphics/tesseract/Makefile
@@ -1,9 +1,13 @@
-# $NetBSD: Makefile,v 1.5 2008/10/30 22:12:59 wiz Exp $
+# $NetBSD: Makefile,v 1.6 2009/07/21 16:00:19 brook Exp $
 #
 
 DISTNAME=	tesseract-2.03
 CATEGORIES=	graphics
 MASTER_SITES=	http://tesseract-ocr.googlecode.com/files/
+DISTFILES+=	${DISTNAME}.tar.gz
+.for l in deu eng fra ita nld spa
+DISTFILES+=	tesseract-2.00.$l.tar.gz
+.endfor
 
 MAINTAINER=	pkgsrc-users@NetBSD.org
 HOMEPAGE=	http://code.google.com/p/tesseract-ocr/
@@ -13,7 +17,7 @@ PKG_DESTDIR_SUPPORT=user-destdir
 
 GNU_CONFIGURE=	yes
 USE_LANGUAGES=	c c++
-USE_TOOLS+=	gmake
+USE_TOOLS+=	gmake pax
 
 post-extract:
 	${RM} ${WRKSRC}/java/makefile
@@ -30,6 +34,7 @@ post-install:
 	${INSTALL_DATA} ${WRKSRC}/README ${DESTDIR}${PREFIX}/share/doc/tesseract
 	${INSTALL_DATA_DIR} ${DESTDIR}${PREFIX}/share/tesseract
 	${INSTALL_DATA} ${WRKSRC}/phototest.tif ${DESTDIR}${PREFIX}/share/tesseract
+	cd ${WRKDIR}/tessdata && ${PAX} -rw * ${DESTDIR}${PREFIX}/share/tessdata
 
 .include "../../graphics/tiff/buildlink3.mk"
 .include "../../mk/bsd.pkg.mk"
