--- a/x11/py-qt3-base/Makefile.common
+++ b/x11/py-qt3-base/Makefile.common
@@ -1,4 +1,4 @@
-# $NetBSD: Makefile.common,v 1.12 2009/06/17 07:11:03 hasso Exp $
+# $NetBSD: Makefile.common,v 1.13 2009/07/22 09:19:37 wiz Exp $
 #
 # used by x11/py-qt3-base/Makefile
 # used by x11/py-qt3-modules/Makefile
@@ -14,8 +14,6 @@ MASTER_SITES=		http://www.riverbankcomputing.com/static/Downloads/PyQt3/
 
 MAINTAINER=		pkgsrc-users@NetBSD.org
 HOMEPAGE=		http://www.riverbankcomputing.com/software/pyqt/intro
-
-PYTHON_VERSIONS_ACCEPTED=	25 24 23
 
 .include "../../mk/bsd.prefs.mk"
 
