--- a/lang/py24-html-docs/Makefile
+++ b/lang/py24-html-docs/Makefile
@@ -1,4 +1,4 @@
-# $NetBSD: Makefile,v 1.6 2009/06/14 22:58:03 joerg Exp $
+# $NetBSD: Makefile,v 1.7 2009/07/22 09:28:15 wiz Exp $
 #
 
 DISTNAME=	html-2.4.3
@@ -27,7 +27,6 @@ PLIST_SRC=	${WRKDIR}/.PLIST_SRC
 INSTALLATION_DIRS=	${HTMLDIR}
 
 do-install:
-	${CAT} ${PKGDIR}/PLIST.pre >${PLIST_SRC}
 	cd ${WRKSRC} && pax -rw -pe [a-z]* ${DESTDIR}${PREFIX}/${HTMLDIR}
 	cd ${DESTDIR}${PREFIX} && ${FIND} ${HTMLDIR} -type f -print >>${PLIST_SRC}
 
