--- a/lang/ruby-doc-stdlib/Makefile
+++ b/lang/ruby-doc-stdlib/Makefile
@@ -1,4 +1,4 @@
-# $NetBSD: Makefile,v 1.5 2009/06/14 22:58:03 joerg Exp $
+# $NetBSD: Makefile,v 1.6 2009/07/22 09:30:39 wiz Exp $
 
 DISTNAME=	ruby-doc-stdlib-0.10.1
 CATEGORIES=	lang ruby
@@ -24,7 +24,6 @@ do-install:
 		${XARGS} ${CHMOD} ${PKGDIRMODE}
 	${FIND} ${DESTDIR}${PREFIX}/${DOCDIR} -type f -print |		\
 		${XARGS} ${CHMOD} ${SHAREMODE}
-	${CAT} ${PKGDIR}/PLIST.pre >${PLIST_SRC}
 	cd ${DESTDIR}${PREFIX} &&					\
 		${FIND} ${DOCDIR} -type f -print >> ${PLIST_SRC}
 
