--- a/x11/qt4-libs/Makefile.common
+++ b/x11/qt4-libs/Makefile.common
@@ -1,5 +1,6 @@
-# $NetBSD: Makefile.common,v 1.14 2009/07/10 19:30:15 abs Exp $
+# $NetBSD: Makefile.common,v 1.15 2009/07/22 09:41:07 wiz Exp $
 # used by x11/qt4-libs/Makefile
+# used by x11/qt4-docs/Makefile
 
 DISTNAME=	qt-x11-opensource-src-${QTVERSION}
 CATEGORIES=	x11
