--- a/devel/libgsf/Makefile
+++ b/devel/libgsf/Makefile
@@ -1,7 +1,7 @@
-# $NetBSD: Makefile,v 1.62 2009/05/27 20:09:36 wiz Exp $
+# $NetBSD: Makefile,v 1.63 2009/07/22 12:23:37 wiz Exp $
 #
 
-DISTNAME=	libgsf-1.14.14
+DISTNAME=	libgsf-1.14.15
 CATEGORIES=	devel gnome
 MASTER_SITES=	${MASTER_SITE_GNOME:=sources/libgsf/1.14/}
 EXTRACT_SUFX=	.tar.bz2
@@ -9,7 +9,7 @@ EXTRACT_SUFX=	.tar.bz2
 MAINTAINER=	pkgsrc-users@NetBSD.org
 HOMEPAGE=	http://www.gnome.org/
 COMMENT=	GNOME2 structured file library
-LICENSE=	gnu-gpl-v2 # AND gnu-lgpl-v2.1
+LICENSE=	gnu-gpl-v2 AND gnu-lgpl-v2.1
 
 PKG_DESTDIR_SUPPORT=	user-destdir
 
