--- a/x11/pixman/Makefile
+++ b/x11/pixman/Makefile
@@ -1,8 +1,7 @@
-# $NetBSD: Makefile,v 1.29 2009/07/21 15:03:29 tnn Exp $
+# $NetBSD: Makefile,v 1.30 2009/07/22 12:37:16 wiz Exp $
 #
 
-DISTNAME=	pixman-0.15.16
-PKGREVISION=	1
+DISTNAME=	pixman-0.15.18
 CATEGORIES=	x11
 MASTER_SITES=	${MASTER_SITE_XORG:=lib/}
 EXTRACT_SUFX=	.tar.bz2
