--- a/databases/sqlite/Makefile
+++ b/databases/sqlite/Makefile
@@ -1,7 +1,6 @@
-# $NetBSD: Makefile,v 1.40 2009/06/08 20:06:01 asau Exp $
+# $NetBSD: Makefile,v 1.41 2009/07/22 16:37:26 drochner Exp $
 
-DISTNAME=		sqlite-2.8.16
-PKGREVISION=		2
+DISTNAME=		sqlite-2.8.17
 CATEGORIES=		databases
 MASTER_SITES=		http://www.hwaci.com/sw/sqlite/ \
 			http://www.sqlite.org/
@@ -17,11 +16,11 @@ USE_TOOLS+=		gmake
 USE_LIBTOOL=		yes
 
 GNU_CONFIGURE=		yes
-CONFIGURE_SCRIPT=	../sqlite-2.8.16/configure
+CONFIGURE_SCRIPT=	../sqlite-2.8.17/configure
 CONFIGURE_ARGS+=	--without-tcl
 CONFIGURE_ENV+=		config_TARGET_READLINE_INC="-I${BUILDLINK_PREFIX.readline}/include"
-CONFIG_GUESS_OVERRIDE=	../sqlite-2.8.16/config.guess
-CONFIG_SUB_OVERRIDE=	../sqlite-2.8.16/config.sub
+CONFIG_GUESS_OVERRIDE=	../sqlite-2.8.17/config.guess
+CONFIG_SUB_OVERRIDE=	../sqlite-2.8.17/config.sub
 
 .include "../../mk/bsd.prefs.mk"
 
@@ -33,7 +32,7 @@ CFLAGS+=		-DUINT32_TYPE=u_int32_t -DUINT16_TYPE=u_int16_t \
 			-DUINT8_TYPE=u_int8_t -DINTPTR_TYPE=long
 .endif
 
-PKGCONFIG_OVERRIDE=	${WRKDIR}/sqlite-2.8.16/sqlite.pc.in
+PKGCONFIG_OVERRIDE=	${WRKDIR}/sqlite-2.8.17/sqlite.pc.in
 
 INSTALLATION_DIRS=	${PKGMANDIR}/man1
 
@@ -41,7 +40,7 @@ post-extract:
 	${MKDIR} ${WRKSRC}
 
 post-install:
-	${INSTALL_MAN} ${WRKDIR}/sqlite-2.8.16/sqlite.1 ${DESTDIR}${PREFIX}/${PKGMANDIR}/man1
+	${INSTALL_MAN} ${WRKDIR}/sqlite-2.8.17/sqlite.1 ${DESTDIR}${PREFIX}/${PKGMANDIR}/man1
 
 .include "../../devel/readline/buildlink3.mk"
 .include "../../mk/bsd.pkg.mk"
